--- a/BenWeb/WebContent/index.html
+++ b/BenWeb/WebContent/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>index</title>
+<title>Hello</title>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 </head>
 <body>
