--- a/BenWeb/WebContent/index.html
+++ b/BenWeb/WebContent/index.html
@@ -5,6 +5,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 </head>
 <body>
-<h3> Hello world</h3>
+<h3> Hello world 2</h3>
 </body>
 </html>
